Use ArrayDeque instead of ArrayList.